Add missing but recommended JVM arguments in migrate config tool
Currently recommending
--add-opens=java.base/java.nio=ALL-UNNAMED,
--add-opens=java.base/java.io=ALL-UNNAMED,
--add-opens=java.base/sun.nio.ch=ALL-UNNAMED,
-Dlog4j2.disable.jmx=true